<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="2"
        app:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/button1"
            android:gravity="center"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button1"
            app:layout_column="0"
            app:layout_row="0"
            android:onClick="playPhrase"
            android:tag="doyouspeakenglish"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button2"
            app:layout_column="0"
            app:layout_row="1"
            android:onClick="playPhrase"
            android:tag="hello"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button3"
            app:layout_column="0"
            app:layout_row="2"
            android:onClick="playPhrase"
            android:tag="ilivein"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button4"
            app:layout_column="0"
            app:layout_row="3"
            android:onClick="playPhrase"
            android:tag="please"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button5"
            app:layout_column="1"
            app:layout_row="0"
            android:onClick="playPhrase"
            android:tag="goodevening"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button6"
            app:layout_column="1"
            app:layout_row="1"
            android:onClick="playPhrase"
            android:tag="howareyou"/>
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button7"
            app:layout_column="1"
            app:layout_row="2"
            android:onClick="playPhrase"
            android:tag="mynameis"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/button8"
            app:layout_column="1"
            app:layout_row="3"
            android:onClick="playPhrase"
            android:tag="welcome"/>

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>